Add header nav section

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     <meta charset="UTF-8" />
     <title>Landing page</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header class="bg-dark">
+      <nav class="container">
+        <span class="nav-logo">Header Logo</span>
+        <ul>
+          <li><a href="#" class="body">Header link one</a></li>
+          <li><a href="#" class="body">Header link two</a></li>
+          <li><a href="#" class="body">Header link three</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
