Add hero section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
           <li><a href="#" class="body">Header link three</a></li>
         </ul>
       </nav>
+
+      <!-- Hero -->
+      <div class="container hero">
+        <div>
+          <h1>This website is <br />awesome</h1>
+          <p class="body">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower in contrast
+          </p>
+          <a href="#" class="cta">Sign up</a>
+        </div>
+        <img
+          src="https://images.unsplash.com/photo-1754829953816-6e506536e7cb?q=80&w=1539&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="hero image"
+        />
+      </div>
     </header>
   </body>
 </html>
