Add cards section

--- a/index.html
+++ b/index.html
@@ -39,5 +39,28 @@
         />
       </div>
     </header>
+
+    <!-- Info cards -->
+    <div class="container">
+      <h2>Some random information.</h2>
+      <div class="card-container">
+        <article class="card">
+          <div></div>
+          <span>this is some subtext under an illustration or image</span>
+        </article>
+        <article class="card">
+          <div></div>
+          <span>this is some subtext under an illustration or image</span>
+        </article>
+        <article class="card">
+          <div></div>
+          <span>this is some subtext under an illustration or image</span>
+        </article>
+        <article class="card">
+          <div></div>
+          <span>this is some subtext under an illustration or image</span>
+        </article>
+      </div>
+    </div>
   </body>
 </html>
