--- a/index.html
+++ b/index.html
@@ -62,5 +62,17 @@
         </article>
       </div>
     </div>
+
+    <!-- Quote -->
+    <div class="bg-light">
+      <p class="quote">
+        <cite
+          >This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.</cite
+        >
+        <span>-Thor, God of Thunder</span>
+      </p>
+    </div>
   </body>
 </html>
