Add CTA section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             This website has some subtext that goes here under the main title.
             It's a smaller font and the color is lower in contrast
           </p>
-          <a href="#" class="cta">Sign up</a>
+          <a href="#" class="btn cta">Sign up</a>
         </div>
         <img
           src="https://images.unsplash.com/photo-1754829953816-6e506536e7cb?q=80&w=1539&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -73,6 +73,19 @@
         >
         <span>-Thor, God of Thunder</span>
       </p>
+    </div>
+
+    <!-- CTA -->
+    <div class="container">
+      <div class="cta-banner">
+        <div>
+          <p class="body"><b>Call to action! It's time!</b></p>
+          <p class="body">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <a href="#" class="btn btn-border">Sign up</a>
+      </div>
     </div>
   </body>
 </html>
