--- a/index.html
+++ b/index.html
@@ -87,5 +87,10 @@
         <a href="#" class="btn btn-border">Sign up</a>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="bg-dark">
+      <p class="container">Copyright &copy; 2025 cb-co.</p>
+    </footer>
   </body>
 </html>
